[package]
name = "cors-proxy"
version = "0.2.3"
authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
edition = "2021"
license = "MIT"
description = "CORS Proxy"
repository = "https://github.com/unixgeek/cors-proxy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.8"
wee_alloc = "0.4.5"

[dev-dependencies]
console_error_panic_hook = "0.1.1"

[profile.release]
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']