[package]
name = "cors-proxy"
version = "0.2.4"
authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
edition = "2021"
license = "MIT"
description = "CORS Proxy"
repository = "https://github.com/unixgeek/cors-proxy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "~1.0.0"
worker = "~0.0.9"
wee_alloc = "~0.4.5"
console_error_panic_hook = { version = "~0.1.7", optional = true }

[profile.release]
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']