[package]
name = "cors-proxy"
version = "0.3.1"
authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
edition = "2021"
license = "MIT"
description = "CORS Proxy"
repository = "https://github.com/unixgeek/cors-proxy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "=1.0.0"
worker = "=0.0.12"
console_error_panic_hook = { version = "=0.1.7", optional = true }

[profile.release]
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
